semi-functional, I will continue to work on this when I can find the motivation to not be infuriated by it

--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
 </head>
 <body>
 <!-- header/jumbotron -->
-<header class="jumbotron jumbotron-fluid">
-    <h1 class="container display-4">Your Local Weather Forecast</h1>
-    <p></p>
- </header>
-    <hr>
+
+
+<section class="top-banner jumbotron-fluid">
+    <div class="container">
+      <h1 class="heading">WeatherHub</h1>
 
 <!-- location of search bar/button for city/state/location-->
-<div>
-    <input type="text" id="searchTerm" name="city" onclick="ResetSubmitButton()">
-    <button type="button" class="btn" id="submit-search" onclick="searchCityAction()" style="background-color: blanchedalmond;">Begin Search</button>
-    <ul id="city-list"></ul>
+<form>
+    <input type="text" placeholder="Search for a City" autofocus>
+    <button type="submit" class="btn" id="submit-search" style="background-color: blanchedalmond;">Begin Search</button>
+    <span class="msg"></span>
+</form>
 </div>
+</section>
 
-<!-- cards illistration 5 day weather forecast-->
-<section id="container" class="row">
-    <div class="card col-4">
-        <h2 id="Day1"></h2>
-        <ul>
-            <img id="Day1-icon" src="http://weathermap.org/img/wn/10d@2x.png">
-            <li id="Day1-temp">Temp</li>
-            <li id="Day1-wind">Wind</li>
-            <li id="Day1-hum">Hum</li>
-        </ul>
+<section class="ajax-section">
+    <div class="container">
+      <ul class="cities"></ul>
     </div>
+  </section>
+
+  <!-- cards illistration 5 day weather forecast-->
+
+
+<section id="ajax-container" class="row justify-content-center">
     <div class="card col-2">
         <h2 id="Day1"></h2>
         <ul>
@@ -41,38 +42,57 @@
             <li id="Day1-temp">Temp</li>
             <li id="Day1-wind">Wind</li>
             <li id="Day1-hum">Hum</li>
+            <l1 id="Day1-uv">UV-Ind</l1>
+
         </ul>
     </div>
     <div class="card col-2">
-        <h2 id="Day1"></h2>
+        <h2 id="Day2"></h2>
         <ul>
-            <img id="Day1-icon" src="http://weathermap.org/img/wn/10d@2x.png">
-            <li id="Day1-temp">Temp</li>
-            <li id="Day1-wind">Wind</li>
-            <li id="Day1-hum">Hum</li>
+            <img id="Day2-icon" src="http://weathermap.org/img/wn/10d@2x.png">
+            <li id="Day2-temp">Temp</li>
+            <li id="Day2-wind">Wind</li>
+            <li id="Day2-hum">Hum</li>
+            <l1 id="Day2-uv">UV-Ind</l1>
+
         </ul>
     </div>
     <div class="card col-2">
-        <h2 id="Day1"></h2>
+        <h2 id="Day3"></h2>
         <ul>
-            <img id="Day1-icon" src="http://weathermap.org/img/wn/10d@2x.png">
-            <li id="Day1-temp">Temp</li>
-            <li id="Day1-wind">Wind</li>
-            <li id="Day1-hum">Hum</li>
+            <img id="Day3-icon" src="http://weathermap.org/img/wn/10d@2x.png">
+            <li id="Day3-temp">Temp</li>
+            <li id="Day3-wind">Wind</li>
+            <li id="Day3-hum">Hum</li>
+            <l1 id="Day3-uv">UV-Ind</l1>
+
         </ul>
     </div>
     <div class="card col-2">
-        <h2 id="Day1"></h2>
+        <h2 id="Day4"></h2>
         <ul>
-            <img id="Day1-icon" src="http://weathermap.org/img/wn/10d@2x.png">
-            <li id="Day1-temp">Temp</li>
-            <li id="Day1-wind">Wind</li>
-            <li id="Day1-hum">Hum</li>
+            <img id="Day4-icon" src="http://weathermap.org/img/wn/10d@2x.png">
+            <li id="Day4-temp">Temp</li>
+            <li id="Day4-wind">Wind</li>
+            <li id="Day4-hum">Hum</li>
+            <l1 id="Day4-uv">UV-Ind</l1>
+
+        </ul>
+    </div>
+    <div class="card col-2">
+        <h2 id="Day5"></h2>
+        <ul>
+            <img id="Day5-icon" src="http://weathermap.org/img/wn/10d@2x.png">
+            <li id="Day5-temp">Temp</li>
+            <li id="Day5-wind">Wind</li>
+            <li id="Day5-hum">Hum</li> 
+            <l1 id="Day5-uv">UV-Ind</l1>
         </ul>
     </div>
 </section>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
